QL4BIMinterpreter/Parser/QL4BIM/tQL4BIM.ATG
COMPILER QL4BIM

public FuncNode GlobalFunc { get; private set; }
 
 
CHARACTERS

	digit = "0123456789".
	up = "ABCDEFGHIJKLMNOPQRSTUVWXYZ".
	low = "abcdefghijklmnopqrstuvwxyz".
	specials =":.-_\\".
	cr  = '\r'.
	lf  = '\n'.
	tab = '\t'.
	str = up + low + digit.
	add = '+'.
	minus = '-'.
 

TOKENS
	float = [add|minus] digit {digit} '.' {digit} ['E' [add|minus] digit {digit}].
	number = [add|minus] digit {digit}.
	lowString = low {low | up | digit}.
	upString = up {low | up  | digit}.
	string_ = '\"' { str | specials } '\"'.
	minust = minus.

COMMENTS FROM "/*" TO "*/" NESTED
COMMENTS FROM "//" TO lf
IGNORE cr + lf + tab

PRODUCTIONS

	QL4BIM												
	= 		
	{ 
		statement_			
	}.						
	/*=====================================================*/

	statement_														
	=											
	lowString																						
	{													
	"[]" |
	"[" lowString											
	 "|" lowString										
	{"|" lowString}										
	"]"
	}
	"="													
	expression.						
	/*=====================================================*/

	expression					
	= 
	upString											
	"("													
		argument							
	{ ","										
		argument								
	} ")".
	/*=====================================================*/

	argument			
	=
	setRelAttLongShort [exType | exAtt [attPredicate]  | countPredicate ] 					
	|																				
	constant.
	/*=====================================================*/

	constant =  string_ | number | float | bool_.
	/*=====================================================*/

	bool_ = "true" | "false" | "unknown".
	/*=====================================================*/

	attPredicate = equalsPred | inPred | morePred | moreEqulPred | lessPred | lessEqulPred.
	/*=====================================================*/

	equalsPred = "=" (constant | setRelAttPredEnd).
	inPred = "~" (string_ | setRelAttPredEnd).
	morePred = ">"  numericOrSetRelAtt.
	moreEqulPred = ">="  numericOrSetRelAtt.
	lessPred = "<"  numericOrSetRelAtt.
	lessEqulPred = "<="  numericOrSetRelAtt.

	countPredicate = (">" | ">=" | "<" | "<=" | "=") number.

	/*=====================================================*/

	relAtt = "[" lowString "]".
	/*=====================================================*/

	exAtt = "." (lowString | upString).
	/*=====================================================*/

	exType = "is" (lowString | upString).
	/*=====================================================*/


	setRelAttLongShort = lowString [ relAtt ] | relAtt.
	/*=====================================================*/
	

	setRelAttPredEnd = setRelAttLongShort exAtt.
	/*=====================================================*/


	numericOrSetRelAtt = number | float | setRelAttPredEnd.
END QL4BIM.
